# packtfreegrabber

./: README.md  Readme.md  getFreeBook.py  pyproject.toml
packtfreegrabber/: getFreeBook.py
packtfreegrabber.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
