[tool.poetry]
name = "packtfreegrabber"
version = "0.1.0"
description = "Download the Packt free book of the day."
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
ppfreebook = "packtfreegrabber.getFreeBook:main"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
